Fixes * search version number * Layout shift

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,7 @@
     background-color: hsl(0, 0%, 21%);
     color: hsl(0, 0%, 96%);
   }
+
+  #searchResults:empty {
+    height: 50vh !important;
+  }
